flagger/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo
  namespace: test
spec:
  rules:
  - host: app.flagger.minikube
    http:
      paths:
      - backend:
          serviceName: podinfo
          servicePort: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: podinfo-ingress
  namespace: test
spec:
  virtualhost:
    fqdn: app.flagger.minikube
  includes:
    - name: podinfo
      namespace: test
      conditions:
        - prefix: /
